@@ -62,10 +62,18 @@ class Sys::Socket {
   native static method WSAPoll : int ($fds : Sys::IO::PollfdArray, $nfds : int, $timeout : int);
 
 
+  native static method getaddrinfo_raw : int ($node : string, $service : string,
+                $hints : Sys::Socket::Addrinfo,
+                $res : Sys::Socket::Addrinfo[]);
+
   native static method getaddrinfo : int ($node : string, $service : string,
                 $hints : Sys::Socket::Addrinfo,
                 $res : Sys::Socket::Addrinfo[]);
 
+  native static method getnameinfo_raw : int ($sa : Sys::Socket::Sockaddr, $salen : int,
+                $host : mutable string, $hostlen : int,
+                $serv : mutable string, $servlen : int, $flags : int);
+                
   native static method getnameinfo : int ($sa : Sys::Socket::Sockaddr, $salen : int,
                 $host : mutable string, $hostlen : int,
                 $serv : mutable string, $servlen : int, $flags : int);
